popupi scrollbar fix

--- a/kalender/calendar.css
+++ b/kalender/calendar.css
@@ -267,7 +267,7 @@ ul {
         left: 0;
         top: 0;
         width: 100%;
-        height: 100%;
+        height: 85.5%;
         overflow: auto;
         background-color: rgb(0,0,0);
         background-color: rgba(0, 0, 0, 0.52);
@@ -277,13 +277,11 @@ ul {
 
     .popupasi {
         width: 90vw;
-
         max-width: 90vw;
         font-size: 2.3vw;
         line-height: 10vh;
         z-index: 1;
         margin-left: 4vw;
-        top: 12vh;
         background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 40%, rgba(226, 226, 226) 40%, rgba(226, 226, 226) 81%, rgba(255,255,255,1) 81%, rgba(255,255,255,1) 100%);
     }
 
